<resources>
    <string name="app_name">SettingsX</string>
    <string name="hello_world">Hello world!</string>
    <string name="page1">Main page</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_general">General</string>
    <string name="general">GENERAL</string>
    <string name="defaultcat">Default Category</string>
    <string name="defaultdesc">The default section to open upon application launch.</string>
    <string name="nav_item_advanced">Advanced</string>
    <string name="nav_item_device">Device Info</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help and Feedback</string>
    <string name="vibrator_intensity">Vibrator Intentsity</string>
    <string name="dt2w">Double Tap To Wake</string>
    <string name="disable">Disabled</string>
    <string name="vibration_intensity_sub">Control the intensity of the vibration</string>
    <string name="dt2w_sub">Double tap the screen to wake device</string>
    <string name="zero">0</string>
    <string name="select_option">Select an option from the drawer to begin.</string>
    <string name="rateus">Rate Us</string>
    <string name="rategp">Please leave a rating on Google Play</string>
    <string name="about">About</string>
    <string name="version">SettingsX v1</string>
    <string name="dark">Dark Theme</string>
    <string name="darkdesc">Enable/Disable dark theme</string>
    <string name="log">Logcat</string>
    <string name="logdesc">Touch to get a logcat</string>
    <string name="credits">Credits</string>
    <string name="gtk">Geetesh Kalakoti</string>
    <string name="dmesg">Dmesg</string>
    <string name="dmesgdesc">Touch to get a driver message(dmesg)</string>
    <string name="rlog">Radio Log</string>
    <string name="rlogdesc">Touch to get a radio log</string>

    <string-array name="spinner_items">
        <item>@string/page1</item>
        <item>@string/nav_item_general</item>
        <item>@string/nav_item_advanced</item>
        <item>@string/nav_item_device</item>
        <item>@string/action_settings</item>
        <item>@string/help</item>
    </string-array>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_general</item>
        <item>@string/nav_item_advanced</item>
        <item>@string/nav_item_device</item>
        <item>@string/action_settings</item>
        <item>@string/help</item>
    </string-array>

    <string-array name="nav_drawer_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
